--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
                 </svg>
             </button>
         </div>
+        <div style="position: absolute; width: 100%;">
+            <progress id="progress-bar" value="32" max="100" style="position: absolute; left: 35%; width: 30%;"></progress>
+        </div>
     </div>
     <div id="scene">
     </div>
-        
+    <!-- <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; width: 100%; height: 100%; align-items: center;"> -->
+    <!-- </div> -->
     <style>
         body {
             margin: 0;
@@ -124,6 +128,7 @@
             }
         }
 
+        const progressBar=document.getElementById("progress-bar")
         var url = new URL(window.location.href);
 	    var c = url.searchParams.get("url");
         
@@ -133,9 +138,20 @@
             const pdfjsLib = window['pdfjs-dist/build/pdf'];
             // The workerSrc property shall be specified.
             pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://mozilla.github.io/pdf.js/build/pdf.worker.js';
-            thePdf = await pdfjsLib.getDocument(url).promise;
-            repaint(scene);  // clear previous pdf if any
-            repaint(scene, thePdf);  // render new pdf
+            // pdfjsLib.getDocument(url,undefined,undefined,progressCallback)
+            var loadingTask = pdfjsLib.getDocument(url);
+            //get progress data
+            progressBar.style.display="block"
+            loadingTask.onProgress = function(data){
+                progressBar.value=data.loaded*100/data.total;
+            }
+            //use document
+            loadingTask.promise.then( function (pdf){
+                progressBar.style.display="none"
+                thePdf = pdf;
+                repaint(scene);  // clear previous pdf if any
+                repaint(scene, thePdf);  // render new pdf
+            })
         };
 
         openURL(url)
