--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div style="position: absolute; width: 100%;">
-        <progress id="progress-bar" value="0" max="100" style="position: absolute; left: 35%; width: 30%; margin-top: 5%;"></progress>
+        <div id="progress-loader" class="loader" style="position: absolute; left: 45vw; margin-top: 5vw; width: 5vw; height: 5vw;"></div>
+        <progress id="progress-bar" value="0" max="100" style="display: none;position: absolute; left: 35%; width: 30%; margin-top: 5%;"></progress>
     </div>
     <div id="toolbar" style="display: none;">
         <div style="background-color: #222;width: 9vw; border-right: 1px solid white; border-bottom: 1px solid white; border-bottom-right-radius: 10px;">
@@ -63,6 +64,23 @@
             margin-bottom: 0.5em;
             border: none;
             border-radius: 10%;
+        }
+        .loader {
+            border: 16px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 16px solid #3498db;
+            -webkit-animation: spin 2s linear infinite; /* Safari */
+            animation: spin 2s linear infinite;
+        }        
+        /* Safari */
+        @-webkit-keyframes spin {
+        0% { -webkit-transform: rotate(0deg); }
+        100% { -webkit-transform: rotate(360deg); }
+        }
+
+        @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
         }
     </style>
 
@@ -129,6 +147,7 @@
         }
 
         const progressBar=document.getElementById("progress-bar")
+        const progressLoader=document.getElementById("progress-loader")
         var url = new URL(window.location.href);
 	    var c = url.searchParams.get("url");
         
@@ -141,13 +160,26 @@
             // pdfjsLib.getDocument(url,undefined,undefined,progressCallback)
             var loadingTask = pdfjsLib.getDocument(url);
             //get progress data
-            progressBar.style.display="block"
+            let progressShown=false
             loadingTask.onProgress = function(data){
-                progressBar.value=data.loaded*100/data.total;
+                if(!progressShown){
+                    progressShown=true
+                    if(data.total==undefined){
+                        progressBar.style.display="none"
+                        progressLoader.style.display="block"
+                    }else{
+                        progressBar.style.display="block"
+                        progressLoader.style.display="none"
+                    }
+                }
+                if(data.total){
+                    progressBar.value=data.loaded*100/data.total;
+                }
             }
             //use document
             loadingTask.promise.then( function (pdf){
                 progressBar.style.display="none"
+                progressLoader.style.display="none"
                 thePdf = pdf;
                 repaint(scene);  // clear previous pdf if any
                 repaint(scene, thePdf);  // render new pdf
