--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>_</title>
-    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
+    <script src="./pdf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/intersection-observer@0.12.0/intersection-observer.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/resize-observer-polyfill@1.5.1/dist/ResizeObserver.min.js"></script>
+    
 </head>
 <body>
     <div style="position: absolute; width: 100%;">
@@ -15,12 +18,12 @@
         <div style="background-color: #222;width: 9vw; border-right: 1px solid white; border-bottom: 1px solid white; border-bottom-right-radius: 10px;">
             <button id="zoominbutton" type="button" onclick="zoomIn()">
                 <svg xmlns="http://www.w3.org/2000/svg" className="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" strokeWidth={2}>
-                    <path strokeLinecap="round" strokeLinejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0zM10 7v3m0 0v3m0-3h3m-3 0H7" />
+                    <path strokeLinecap="round" strokeLinejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0zM10 7v3m0 0v3m0-3h3m-3 0H7" ></path>
                 </svg>
             </button>
             <button id="zoomoutbutton" type="button" onclick="zoomOut()">
                 <svg xmlns="http://www.w3.org/2000/svg" className="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" strokeWidth={2}>
-                    <path strokeLinecap="round" strokeLinejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0zM13 10H7" />
+                    <path strokeLinecap="round" strokeLinejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0zM13 10H7" ></path>
                 </svg>
             </button>
         </div>
@@ -93,47 +96,54 @@
 
         let sceneWidth = scene.clientWidth;
 
-        new ResizeObserver((x) => {
+        new ResizeObserver(function (x){
             if (sceneWidth === scene.clientWidth) {
                 return;
             }
             sceneWidth = scene.clientWidth;
             repaint(scene);
             repaint(scene, thePdf);
+            return;
         }).observe(scene);
 
-        async function repaint(scene, pdf) {
+        function repaint(scene, pdf) {
             if (!pdf) {
                 while(scene.firstChild) {
                     scene.removeChild(scene.firstChild);
                 }
                 return;
             }
-            let elem=document.getElementById('toolbar')
-            elem=elem.cloneNode(true)
-            elem.style.display='block'
-            scene.innerHTML=elem.innerHTML
+            let elem=document.getElementById('toolbar');
+            elem=elem.cloneNode(true);
+            elem.style.display='block';
+            scene.innerHTML=elem.innerHTML;
 
+            let promises=[]
             for (let i = 0; i < pdf.numPages; i++) {
-                const page = await pdf.getPage(i + 1);
-                const viewport = page.getViewport({ scale });
+                promises.push(pdf.getPage(i + 1))
+            }
+
+            Promise.all(promises).then(function (b){
+                b.forEach(function (page){
+                    // const page = 
+                const viewport = page.getViewport({ scale:scale });
                 const canvas = document.createElement('canvas');
 
                 canvas.height = viewport.height;
                 canvas.width = viewport.width;
                 const aspect = viewport.width / viewport.height;
 
-                canvas.style.height = `${(sceneWidth / aspect - 8)*zoom}px`;
-                canvas.style.width = `${(sceneWidth - 8)*zoom}px`;
+                canvas.style.height = (sceneWidth / aspect - 8)*zoom+"px";
+                canvas.style.width = (sceneWidth - 8)*zoom+"px";
                 canvas.style.backgroundColor = '#ccc';
 
                 scene.appendChild(canvas);
 
-                const observer = new IntersectionObserver(events => {
+                const observer = new IntersectionObserver(function (events){
                     if (events[0].isIntersecting) {
                         page.render({
                             canvasContext: canvas.getContext('2d'),
-                            viewport,
+                            viewport:viewport,
                         });
                         observer.disconnect();
                     }
@@ -143,24 +153,26 @@
                     threshold: 0,
                 });
                 observer.observe(canvas);
-            }
+                })
+
+            })
         }
 
-        const progressBar=document.getElementById("progress-bar")
-        const progressLoader=document.getElementById("progress-loader")
+        const progressBar=document.getElementById("progress-bar");
+        const progressLoader=document.getElementById("progress-loader");
         var url = new URL(window.location.href);
 	    var c = url.searchParams.get("url");
         
         url = c || 'https://www.antennahouse.com/hubfs/xsl-fo-sample/pdf/basic-link-1.pdf?hsLang=en';
 
-        async function openURL(url) {
+        function openURL(url) {
             const pdfjsLib = window['pdfjs-dist/build/pdf'];
             // The workerSrc property shall be specified.
-            pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://mozilla.github.io/pdf.js/build/pdf.worker.js';
+            pdfjsLib.GlobalWorkerOptions.workerSrc = './pdf.worker.min.js';
             // pdfjsLib.getDocument(url,undefined,undefined,progressCallback)
             var loadingTask = pdfjsLib.getDocument(url);
             //get progress data
-            let progressShown=false
+            let progressShown=false;
             loadingTask.onProgress = function(data){
                 if(!progressShown){
                     progressShown=true
@@ -187,27 +199,6 @@
         };
 
         openURL(url)
-
-        function openFile(event) {
-            const input = event.target;
-
-            const reader = new FileReader();
-            reader.onload = async function () {
-                const pdfjsLib = window['pdfjs-dist/build/pdf'];
-
-                // The workerSrc property shall be specified.
-                pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://mozilla.github.io/pdf.js/build/pdf.worker.js';
-
-                thePdf = await pdfjsLib.getDocument({
-                    data: reader.result,
-                }).promise;
-
-                repaint(scene);  // clear previous pdf if any
-                repaint(scene, thePdf);  // render new pdf
-                input.style.display = 'none';
-            };
-            reader.readAsArrayBuffer(input.files[0]);
-        };
 
         function scrollDown() {
             const sh = scene.clientHeight;
@@ -252,7 +243,7 @@
         //END: Custom methods
 
 
-        document.addEventListener('keydown', event => {
+        document.addEventListener('keydown', function (event){
             if (event.code === 'PageDown') {
                 event.preventDefault();
                 scrollDown();
@@ -265,50 +256,3 @@
 </body>
 
 </html>
-
-<!-- <input id="file" type='file' accept='application/pdf' onchange='openFile(event)'> -->
-    <!-- <button id="down" onclick="scrollDown()">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd"
-                d="M16.707 10.293a1 1 0 010 1.414l-6 6a1 1 0 01-1.414 0l-6-6a1 1 0 111.414-1.414L9 14.586V3a1 1 0 012 0v11.586l4.293-4.293a1 1 0 011.414 0z"
-                clip-rule="evenodd" />
-        </svg>
-    </button>
-    <button id="clear" onclick="closeFile()">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd"
-                d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                clip-rule="evenodd" />
-        </svg>
-    </button> -->
-    <!-- <button id="up" onclick="scrollUp()">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd"
-                d="M3.293 9.707a1 1 0 010-1.414l6-6a1 1 0 011.414 0l6 6a1 1 0 01-1.414 1.414L11 5.414V17a1 1 0 11-2 0V5.414L4.707 9.707a1 1 0 01-1.414 0z"
-                clip-rule="evenodd" />
-        </svg>
-    </button> -->
-
-
-    <!-- button#down {
-        right: 10px;
-        bottom: 10px;
-    }
-    button#up {
-        right: 10px;
-        top: 10px;
-    }
-    button#clear {
-        right: 10px;
-        top: calc(50% - 2em);
-    }
-    button {
-        position: absolute;
-        background-color: rgba(0, 0, 0, 0.15);
-        color: rgba(0, 0, 0, 0.3);
-        width: 4em;
-        height: 4em;
-        padding: 0;
-        border: none;
-        border-radius: 50%;
-    } -->
